--- a/sample-bibliography.bib
+++ b/sample-bibliography.bib
@@ -247,23 +247,15 @@
 }
 
 
-@article{JCohen96,
+@periodical{JCohen96,
   key = 	 "Cohen",
   editor =       "Jacques Cohen",
-  title =        "Special Issue: Digital Libraries",
+  title =        "Special issue: Digital Libraries",
   journal =      CACM,
   volume =       "39",
   number = 	 "11",
   month =	 nov,
   year = 	 "1996",
-  author = 	 "",
-  publisher = 	 "",
-  chapter = 	"",
-  pages = 	"",
-  series = 	 "",
-  address = 	 "",
-  edition = 	 "",
-  note = 	 "",
 }
 
 
@@ -626,26 +618,21 @@ year = {2003},
 }
 
 
-@misc{Thornburg01,
+@online{Thornburg01,
   author =       "Harry Thornburg",
   year =         "2001",
   title =        "Introduction to Bayesian Statistics",
-  note =         "",
   url =           "http://ccrma.stanford.edu/~jos/bayes/bayes.html",
-  howpublished = "",
   month = 	 mar,
   lastaccessed = "March 2, 2005",
 }
 
 
-@misc{Ablamowicz07,
+@online{Ablamowicz07,
   author =       "Rafal Ablamowicz and Bertfried Fauser",
   year =         "2007",
   title =        "CLIFFORD: a Maple 11 Package for Clifford Algebra Computations, version 11",
-  note = 	 "",
   url =          "http://math.tntech.edu/rafal/cliff11/index.html",
-  howpublished = "",
-  month = 	 "",
   lastaccessed = "February 28, 2008",
 }
 
@@ -657,7 +644,6 @@ year = {2003},
   title =        "Stats and Analysis",
   lastaccessed = "June 7, 2006",
   url =          "http://www.poker-edge.com/stats.php",
-  howpublished = "",
 }
 
 @misc{Obama08,
@@ -1402,7 +1388,9 @@ MRREVIEWER = {Min You Qi},
     publisher   = "Keleuven Press",
     address     = "Dayton, OH",		  
     year        = {2007},
-    pages       = "322--328"
+    pages       = "322--328",
+    eprint      = "960935712",
+    primaryclass = "cs",
 }
 
 @techreport{Tzamaloukas-01,
@@ -1548,3 +1536,5 @@ pages = "24--31"}
  address = {New York, NY, USA},
  keywords = {Wireless sensor networks, media access control, multi-channel, radio interference, time synchronization},
 }
+
+
