More bib-related doc changes

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1187,6 +1187,22 @@
 % }
 % \end{verbatim}
 % 
+% Sometimes you need to cite a complete issue of a journal.  The entry
+% \path{periodical} is intended for this:
+% \begin{verbatim}
+% @periodical{JCohen96,
+%  key = 	 "Cohen",
+%  editor =       "Jacques Cohen",
+%  title =        "Special issue: Digital Libraries",
+%  journal =      CACM,
+%  volume =       "39",
+%  number = 	 "11",
+%  month =	 nov,
+%  year = 	 "1996",
+% }
+%
+% \end{verbatim}
+% 
 %
 %\subsection{Colors}
 %\label{sec:ug_colors}
