--- a/README
+++ b/README
@@ -41,3 +41,6 @@ version 1.19    Include 'Abstract', 'Acknowledgements', and 'References'
 version 1.20    Bug fixes, documentation updates
 
 version 1.21    Bibliography changes: added arXiv, some cleanup
+
+version 1.22    Bibliography changes for Aptara backend;  should be 
+		invisible for the users.
