--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1270,7 +1270,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/09/04 v1.21 Typesetting articles for Association of
+[2016/09/25 v1.22 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1306,6 +1306,7 @@ Computing Machinery]
 % \changes{v1.19}{2016/07/28}{Include 'Abstract', 'Acknowledgements',
 % and 'References' in PDF bookmarks (Matthew Fluet)}
 % \changes{v1.20}{2016/08/06}{Bug fixes for bst}
+% \changes{v1.22}{2016/09/25}{More bibliography changes for Aptara}
 %
 %
 % And the driver code:
