--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -117,7 +117,8 @@ The details of the construction of the \texttt{.bib} file
 are beyond the scope of this sample document, but more
 information can be found in the \textit{Author's Guide},
 and exhaustive details in the \textit{\LaTeX\ User's
-Guide}~\cite{Lamport:LaTeX}.
+Guide} by Lamport~\shortcite{Lamport:LaTeX}.
+
 
 This article shows only the plainest form
 of the citation command, using \texttt{{\char'134}cite}.
