Documentation typos fixed (thanks to  Stephen Spencer)

--- a/README
+++ b/README
@@ -50,3 +50,6 @@ version 1.23    Added PACM PL journal option.
 version 1.24    Added IMWUT journal option.
 
 version 1.25    Updated PACMPL journal option.
+
+version 1.26    Bug fixes
+
