--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1106,7 +1106,7 @@
 % \DescribeMacro{\citestyle}%
 % If you use |natbib|, you can select one of two predefined sitation
 % styles: the author-year format |acmauthoryear| or the numeric
-% format |acmnumeric| using the command \cs{sitestyle}, for example,
+% format |acmnumeric| using the command \cs{citestyle}, for example,
 % \begin{verbatim}
 % \citestyle{acmauthoryear}
 % \end{verbatim}
