--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -76,7 +76,7 @@
 \email{author7@umbhaliu.ac.za} 
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{F. Author et. al.}
+\renewcommand{\shortauthors}{F. Author et al.}
 
 
 %
