--- a/sample-sigchi.tex
+++ b/sample-sigchi.tex
@@ -102,7 +102,7 @@
 \email{jpkumquat@consortium.net}
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{B. Trovato et. al.}
+\renewcommand{\shortauthors}{B. Trovato et al.}
 
 
 \begin{abstract}
