--- a/sample-siggraph.tex
+++ b/sample-siggraph.tex
@@ -105,7 +105,7 @@
 
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{B. Trovato et. al.}
+\renewcommand{\shortauthors}{B. Trovato et al.}
 
 \begin{abstract}
 This paper provides a sample of a \LaTeX\ document which conforms,
