--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -106,7 +106,7 @@
 
 
 % The default list of authors is too long for headers}
-\renewcommand{\shortauthors}{B. Trovato et. al.}
+\renewcommand{\shortauthors}{B. Trovato et al.}
 
 
 \begin{abstract}
