--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -230,11 +230,11 @@ coalescing were made).
 
 \section{Performance Evaluation}
 
-During all the experiments, the Geographic Forwarding (GF)
-\cite{Akyildiz-01} routing protocol is used. GF exploits geographic
-information of nodes and conducts local data-forwarding to achieve
-end-to-end routing. Our simulation is configured according to the
-settings in Table~\ref{tab:one}. Each run lasts for 2 minutes and
+During all the experiments, the Geographic Forwarding (GF) by Akuilidz
+et al.~\shortcite{Akyildiz-01} routing protocol is used. GF exploits
+geographic information of nodes and conducts local data-forwarding to
+achieve end-to-end routing. Our simulation is configured according to
+the settings in Table~\ref{tab:one}. Each run lasts for 2 minutes and
 repeated 100 times. For each data value we present in the results, we
 also give its 90\% confidence interval.
 
