--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1731,7 +1731,7 @@ Computing Machinery]
 %
 % \end{macro}
 %
-% \changes{v1.28}{2017/01/07}{Corrected natbib=false behavior}
+% \changes{v1.28}{2017/01/07}{Corrected option natbib behavior}
 % The default is numeric:
 %    \begin{macrocode}
 \if@ACM@natbib
