--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-% Copyright 2016, Association for Computing Machinery
+% Copyright 2016-2017, Association for Computing Machinery
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either
 % version 1.3 of this license or (at your option) any
@@ -42,7 +42,7 @@
 % \GetFileInfo{acmart.dtx}
 % \newcommand{\progname}[1]{\textsf{#1}}
 % \title{\LaTeX{} Class for \emph{Association for Computing
-% Machinery}\thanks{\copyright 2016, Association for Computing Machinery}}
+% Machinery}\thanks{\copyright 2016--2017, Association for Computing Machinery}}
 % \author{Boris Veytsman\thanks{%
 % \href{mailto:borisv@lk.net}{\texttt{borisv@lk.net}},
 % \href{mailto:boris@varphi.com}{\texttt{boris@varphi.com}}}}
