Another warning suppressed

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1843,6 +1843,7 @@ Computing Machinery]
   \def\unskip{}
   \def\textbullet{- }
   \def\textrightarrow{ -> }
+  \def\footnotemark{}
 }
 \urlstyle{rm}
 \ifcase\ACM@format@nr
