Removed spurious indent at start of abstract; improved kerning in CCS description list.

--- a/README
+++ b/README
@@ -57,4 +57,5 @@ version 1.27    Bug fixes
 
 version 1.28    Bug fixes: natbib=false now behaves correctly.
 
-
+version 1.29	Removed spurious indent at start of abstract;
+		improved kerning in CCS description list.
