Documented changes by Matthew Fluet

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1287,7 +1287,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/01/07 v1.28 Typesetting articles for Association of
+[2017/01/22 v1.29 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -4488,6 +4488,7 @@ Computing Machinery]
 % \changes{v1.15}{2016/07/04}{Better handling of anonymous mode}
 % \changes{v1.16}{2016/07/07}{Customize header/footer text font}
 % \changes{v1.17}{2016/07/10}{Added paper title to sigs}
+% \changes{v1.29}{2017/01/22}{Corrected printfolios (Matthew Fluet)}
 %   The pagestyle for all pages but the first one
 %    \begin{macrocode}
 \fancypagestyle{standardpagestyle}{%
