Corrected the placement of footnotes in the samples (thanks to Rasit Eskicioglu )

--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
-The \textit{proceedings} are the records of a conference\footnote{This
-  is a footnote}.  ACM seeks
+The \textit{proceedings} are the records of a conference.\footnote{This
+  is a footnote}  ACM seeks
 to give these conference by-products a uniform, high-quality
 appearance.  To do this, ACM has some rigid requirements for the
 format of the proceedings documents: there is a specified format
@@ -38,9 +38,9 @@ computer code) with \texttt{{\char'134}texttt}.  But remember, you do
 not have to indicate typestyle changes when such changes are part of
 the \textit{structural} elements of your article; for instance, the
 heading of this subsection will be in a sans serif\footnote{Another
-  footnote, here.  Let's make this a rather short one to see how it
+  footnote here.  Let's make this a rather long one to see how it
   looks.} typeface, but that is handled by the document class file.
-Take care with the use of\footnote{A third, and last, footnote.}  the
+Take care with the use of\footnote{Another footnote.}  the
 curly braces in typeface changes; they mark the beginning and end of
 the text that is to be in the different typeface.
 
