--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1942,56 +1942,60 @@ Computing Machinery]
 %\label{sec:paper}
 %
 % \changes{v1.17}{2016/07/07}{Slightly decreased margins for sigs}
-% We use |geometry| for dimensions
+% \changes{v1.29}{2017/01/22}{Increased head to 13pt}
+% We use |geometry| for dimensions.  Note the presently margins do not
+% depend on the font size option - maybe we will need to change this.
+% See
+% \url{https://github.com/borisveytsman/acmart/issues/5#issuecomment-272881329}. 
 %    \begin{macrocode}
 \RequirePackage{geometry}
 \ifcase\ACM@format@nr
 \relax % manuscript
-   \geometry{letterpaper,head=1pc}%
+   \geometry{letterpaper,head=13pt}%
 \or % acmsmall
    \geometry{twoside=true,
-     includeheadfoot, head=1pc, foot=2pc,
+     includeheadfoot, head=13pt, foot=2pc,
      paperwidth=6.75in, paperheight=10in,
      top=58pt, bottom=44pt, inner=46pt, outer=46pt
    }%
 \or % acmlarge
-   \geometry{twoside=true, head=1pc, foot=2pc,
+   \geometry{twoside=true, head=13pt, foot=2pc,
      paperwidth=8.5in, paperheight=11in,
      includeheadfoot,
      top=78pt, bottom=114pt, inner=81pt, outer=81pt
      }%
 \or % acmtog
-   \geometry{twoside=true, head=1pc, foot=2pc,
+   \geometry{twoside=true, head=13pt, foot=2pc,
      paperwidth=8.5in, paperheight=11in,
      includeheadfoot, columnsep=24pt,
      top=52pt, bottom=75pt, inner=52pt, outer=52pt
      }%
 \or % sigconf
-   \geometry{twoside=true, head=1pc,
+   \geometry{twoside=true, head=13pt,
      paperwidth=8.5in, paperheight=11in,
      includeheadfoot, columnsep=2pc,
      top=57pt, bottom=73pt, inner=54pt, outer=54pt
      }%
 \or % siggraph
-   \geometry{twoside=true, head=1pc,
+   \geometry{twoside=true, head=13pt,
      paperwidth=8.5in, paperheight=11in,
      includeheadfoot, columnsep=2pc,
      top=57pt, bottom=73pt, inner=54pt, outer=54pt
      }%
 \or % sigplan
-   \geometry{twoside=true, head=1pc,
+   \geometry{twoside=true, head=13pt,
      paperwidth=8.5in, paperheight=11in,
      includeheadfoot=false, columnsep=2pc,
      top=1in, bottom=1in, inner=0.75in, outer=0.75in
      }%
 \or % sigchi
-   \geometry{twoside=true, head=1pc,
+   \geometry{twoside=true, head=13pt,
      paperwidth=8.5in, paperheight=11in,
      includeheadfoot, columnsep=2pc,
      top=66pt, bottom=73pt, inner=54pt, outer=54pt
      }%
 \or % sigchi-a
-   \geometry{twoside=false, head=1pc,
+   \geometry{twoside=false, head=13pt,
      paperwidth=11in, paperheight=8.5in,
      includeheadfoot, marginparsep=72pt,
      marginparwidth=170pt, columnsep=20pt,
