Bug fix (thanks to Ross Moore).  Documentation update.

--- a/README
+++ b/README
@@ -57,5 +57,6 @@ version 1.27    Bug fixes
 
 version 1.28    Bug fixes: natbib=false now behaves correctly.
 
-version 1.29	Removed spurious indent at start of abstract;
-		improved kerning in CCS description list.
+version 1.29	Documentation changes.  Head height increased from 12pt to 13pt.
+		Removed spurious indent at start of abstract.
+		Improved kerning in CCS description list.
