--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1858,10 +1858,10 @@ Computing Machinery]
 \let\@footnotetext@nolink\@footnotetext
 \RequirePackage[bookmarksnumbered,unicode]{hyperref}
 \pdfstringdefDisableCommands{%
-  \def\unskip{}
-  \def\textbullet{- }
-  \def\textrightarrow{ -> }
-  \def\footnotemark{}
+  \def\unskip{}%
+  \def\textbullet{- }%
+  \def\textrightarrow{ -> }%
+  \def\footnotemark{}%
 }
 \urlstyle{rm}
 \ifcase\ACM@format@nr
