--- a/acmart.dtx
+++ b/acmart.dtx
@@ -113,7 +113,7 @@
 %
 % Most probably, you already have this package installed in your
 % favorite \TeX\ distribution;  if not, you may want to upgrade.  You
-% may need to upgrade it anyway since the package uses a number
+% may need to upgrade it anyway since the package uses a number of
 % relatively recent packages, especially the ones related to the
 % fonts.
 %
@@ -891,7 +891,7 @@
 % \item The captions for figures must be entered \emph{after} the
 % figure bodies, and for the tables \emph{before} the table bodies.
 % \item ACM uses the standard types for figures and types and adds
-% several new ones.  In total there are follwing types:
+% several new ones.  In total there are the following types:
 % \begin{description}
 % \item[figure, table:] a standard figure or table, taking full text
 % width in one-column formats and one column in two-column formats.
