--- a/acmart.dtx
+++ b/acmart.dtx
@@ -75,7 +75,7 @@
 % educational and scientific computing society, which delivers
 % resources that advance computing as a science and a
 % profession\footnote{\url{http://www.acm.org/}}.  It was one of the
-% earily adopters of \TeX\ for its typesetting.
+% early adopters of \TeX\ for its typesetting.
 %
 % It provided several different classes for a number of journal and
 % conference proceedings.  Unfortunately during the years since these
