--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1089,7 +1089,7 @@
 % At present \marg{sponsorID} is chosen by the authors and can be an
 % arbitrary key, in the same way the label of \cs{cite} is arbitrarily
 % chosen.  There might be a change to this policy if ACM decides to
-% create a global database of sponsoring organization.
+% create a global database of sponsoring organizations.
 %
 % Example:
 % \begin{verbatim}
