--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1293,7 +1293,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/01/22 v1.29 Typesetting articles for Association of
+[2017/02/04 v1.30 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1334,6 +1334,7 @@ Computing Machinery]
 % \changes{v1.26}{2016/12/24}{Corrected \cs{shortcite} bug}
 % \changes{v1.26}{2016/12/24}{Documentation typos fixed (thanks to
 % Stephen Spencer)} 
+% \changes{v1.30}{2017/02/04}{Bibtex style now recognizes https:// in doi} 
 %
 %
 % And the driver code:
