--- a/sample-bibliography.bib
+++ b/sample-bibliography.bib
@@ -905,13 +905,12 @@ year = {2003},
  series = {ICWS '04},
  year = {2004},
  isbn = {0-7695-2167-3},
- pages = {.21--},
+ pages = {21--22},
  url = {http://dx.doi.org/10.1109/ICWS.2004.64},
  doi = {http://dx.doi.org/10.1109/ICWS.2004.64},
  acmid = {1010128},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
-key = {{$\!\!$}} ,
 }
 
 % div book
@@ -1179,7 +1178,7 @@ key = {{$\!\!$}} ,
  pages = {1714--1747},
  numpages = {34},
  url = {http://dx.doi.org/10.1137/080734467},
- doi = {http://dx.doi.org/10.1137/080734467},
+ doi = {https://dx.doi.org/10.1137/080734467},
  acmid = {1958018},
  publisher = {Society for Industrial and Applied Mathematics},
  address = {Philadelphia, PA, USA},
