--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -306,6 +306,9 @@ work accepted for publication \cite{rous08}, 'YYYYb'-test for prolific author
 Boris / Barbara Beeton: multi-volume works as books
 \cite{MR781536} and \cite{MR781537}.
 
+A couple of citations with DOIs: \cite{2004:ITE:1009386.1010128,
+  Kirschmer:2010:AEI:1958016.1958018}. 
+
 % Appendix
 \appendix
 \section{Switching times}
