Made sample doi closer to the recommended one (thanks to Tobias Pape)

--- a/sample-bibliography.bib
+++ b/sample-bibliography.bib
@@ -1178,7 +1178,7 @@ year = {2003},
  pages = {1714--1747},
  numpages = {34},
  url = {http://dx.doi.org/10.1137/080734467},
- doi = {https://dx.doi.org/10.1137/080734467},
+ doi = {https://doi.org/10.1137/080734467},
  acmid = {1958018},
  publisher = {Society for Industrial and Applied Mathematics},
  address = {Philadelphia, PA, USA},
