--- a/acmart.dtx
+++ b/acmart.dtx
@@ -181,7 +181,7 @@
 %\subsection{Invocation and options}
 %\label{sec:invocation}
 %
-% To use the class put in the premable of your document
+% To use the class put in the preamble of your document
 % \begin{quote}
 %   \cs{documentclass}\oarg{options}|{acmart}|
 % \end{quote}
