--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1293,7 +1293,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/02/04 v1.30 Typesetting articles for Association of
+[2017/02/10 v1.30 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -5095,8 +5095,9 @@ Computing Machinery]
 %\label{end}
 %
 %
+% \changes{v1.30}{2017/02/10}{Added \cs{frenchspacing}} 
 %    \begin{macrocode}
-\normalsize\normalfont
+\normalsize\normalfont\frenchspacing
 %</class>
 %    \end{macrocode}
 %
