--- a/README
+++ b/README
@@ -62,3 +62,6 @@ version 1.29	Documentation changes.  Head height increased from 12pt to 13pt.
 		Improved kerning in CCS description list.
 
 version 1.30    Bibtex style now recognizes https:// in doi.
+	        Added \frenchspacing.
+		\department now has an optional hierarchy level.
+		
