--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1316,7 +1316,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/02/10 v1.30 Typesetting articles for Association of
+[2017/02/15 v1.30 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -2195,12 +2195,15 @@ Computing Machinery]
 %   
 % \end{macro}
 % 
+% \changes{v1.30}{2017/02/15}{Switched to T1: looks like libertine has
+% problems with \cs{l} in OT1}%
 % We use Libertine throughout.
 %    \begin{macrocode}
 \if@ACM@newfonts
 \RequirePackage[tt=false]{libertine}
 \RequirePackage[varqu]{zi4}
 \RequirePackage[libertine]{newtxmath}
+\RequirePackage[T1]{fontenc}
 \fi
 %    \end{macrocode}
 %
