--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2417,6 +2417,7 @@ Computing Machinery]
 %
 % \changes{v1.24}{2016/11/16}{Add IMWUT journal option}
 % \changes{v1.25}{2016/12/03}{Updated PACMPL}
+% \changes{v1.30}{2017/02/15}{Updated IMWUT and PACMPL}
 %
 % We use keyval interface to define journal title and relevant
 % information
@@ -2482,8 +2483,8 @@ Computing Machinery]
   \def\@journalNameShort{ACM Comput. Surv.}%
   \def\@permissionCodeOne{0360-0300}%
 \or % IMWUT
-  \def\@journalName{PACM on Interactive, Mobile, Wearable and
-    Ubiquitous Technologies}% 
+  \def\@journalName{Proceedings of the ACM on Interactive, Mobile,
+    Wearable and Ubiquitous Technologies}%  
   \def\@journalNameShort{PACM Interact. Mob. Wearable Ubiquitous Technol.}%
   \def\@permissionCodeOne{2474-9567}%
 \or % JACM
@@ -2510,8 +2511,8 @@ Computing Machinery]
   \def\@journalName{ACM Journal on Computing and Cultural Heritage}%
   \def\@journalName{ACM J. Comput. Cult. Herit.}%
 \or % PACMPL
-  \def\@journalName{PACM on Programming Languages}%
-  \def\@journalName{PACM Progr. Lang.}%
+  \def\@journalName{Proceedings of the ACM on Programming Languages}%
+  \def\@journalName{Proc. ACM Program. Lang.}%
   \def\@permissionCodeOne{2475-1421}%
 \or % TAAS
   \def\@journalName{ACM Transactions on Autonomous and Adaptive Systems}%
