--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2485,7 +2485,7 @@ Computing Machinery]
 \or % IMWUT
   \def\@journalName{Proceedings of the ACM on Interactive, Mobile,
     Wearable and Ubiquitous Technologies}%  
-  \def\@journalNameShort{PACM Interact. Mob. Wearable Ubiquitous Technol.}%
+  \def\@journalNameShort{Proc. ACM Interact. Mob. Wearable Ubiquitous Technol.}%
   \def\@permissionCodeOne{2474-9567}%
 \or % JACM
   \def\@journalName{Journal of the ACM}%
