Make the default year and month the default year and month.
This change has the additional side benefit that the value for the
default year does not have to be updated manually each year.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2928,7 +2928,7 @@ Computing Machinery]
 %   The current year
 %    \begin{macrocode}
 \def\acmYear#1{\def\@acmYear{#1}}
-\acmYear{2017}
+\acmYear{\the\year}
 %    \end{macrocode}
 %
 % \end{macro}
@@ -2938,7 +2938,7 @@ Computing Machinery]
 %   The current month
 %    \begin{macrocode}
 \def\acmMonth#1{\def\@acmMonth{#1}}
-\acmMonth{1}
+\acmMonth{\the\month}
 %    \end{macrocode}
 %
 % \end{macro}
